<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.18</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.esupportail.emargement</groupId>
	<artifactId>esup-emargement</artifactId>
	<version>1.1.1-SNAPSHOT</version>
	<name>esup-emargement</name>
	<packaging>war</packaging>
	<description>Application emargement</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-ldap</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-integration</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-cas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-ldap</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
		 <groupId>org.springframework.boot</groupId>
		 <artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc7</artifactId>
			<version>4.0</version>
		</dependency>
		<dependency>
		    <groupId>com.opencsv</groupId>
		    <artifactId>opencsv</artifactId>
		    <version>5.9</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-csv</artifactId>
		    <version>1.10.0</version>
		</dependency>
		<!-- Optional, for bootstrap -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>webjars-locator</artifactId>
			<version>0.52</version>
		</dependency>		
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>5.3.3</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>3.7.1</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
		    <artifactId>momentjs</artifactId>
		    <version>2.29.4</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
		    <artifactId>chartjs</artifactId>
		    <version>4.4.3</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>fullcalendar</artifactId>
		    <version>5.11.3</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>awesomplete</artifactId>
		    <version>1.1.4</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>font-awesome</artifactId>
		    <version>6.5.1</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>slim-select</artifactId>
		    <version>1.27.1</version>
		</dependency>
		<dependency>
		  <groupId>org.webjars.npm</groupId>
		  <artifactId>jsqr</artifactId>
		  <version>1.4.0</version>
		</dependency>
		<!-- lancer mvn dependency:tree -->
		<dependency>
		    <groupId>org.webjars.bower</groupId>
		    <artifactId>bootstrap-fileinput</artifactId>
		    <version>5.5.2</version>
			<exclusions>
		        <exclusion>
		            <groupId>org.webjars.bower</groupId>
		            <artifactId>bootstrap</artifactId>
		        </exclusion>
				<exclusion>
		            <groupId>org.webjars.bower</groupId>
		            <artifactId>jquery</artifactId>
		        </exclusion>		        
		    </exclusions>
		</dependency>
		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>bootstrap-input-spinner</artifactId>
		    <version>2.1.1</version>
			<exclusions>
		        <exclusion>
		            <groupId>org.webjars.npm</groupId>
		            <artifactId>bootstrap</artifactId>
		        </exclusion>
				<exclusion>
		            <groupId>org.webjars.npm</groupId>
		            <artifactId>jquery</artifactId>
		        </exclusion>
		        <exclusion>
		            <groupId>org.webjars.npm</groupId>
		            <artifactId>popper.js</artifactId>
		        </exclusion>
		    </exclusions>		    
		</dependency>
		<dependency>
		  <groupId>org.webjars.npm</groupId>
		  <artifactId>bootstrap5-tags</artifactId>
		  <version>1.6.15</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>bootstrap-datepicker</artifactId>
		    <version>1.10.0</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jstree</artifactId>
		    <version>3.3.16</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>datatables</artifactId>
			<version>1.13.5</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>datatables-responsive</artifactId>
		    <version>2.2.7</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>datatables-buttons</artifactId>
		    <version>2.4.1</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>datatables-plugins</artifactId>
		    <version>1.13.6</version>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>datatables.net-datetime</artifactId>
		    <version>1.5.0</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.bower</groupId>
		    <artifactId>pdfmake</artifactId>
		    <version>0.2.7</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jszip</artifactId>
		    <version>3.10.1</version>
		</dependency>
 		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>bootstrap-icons</artifactId>
		    <version>1.11.3</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>popper.js</artifactId>
		    <version>2.11.7</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>suneditor</artifactId>
		    <version>2.45.1</version>
		</dependency>
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap-daterangepicker</artifactId>
			<version>3.1</version>
		</dependency>
	    <dependency>
	        <groupId>com.fasterxml.jackson.dataformat</groupId>
	        <artifactId>jackson-dataformat-xml</artifactId>
	    </dependency>
	    <dependency>
	        <groupId>com.fasterxml.jackson.core</groupId>
	        <artifactId>jackson-core</artifactId>
	    </dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
		</dependency>	
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>
     <!-- flying saucer pdf -->  
        <dependency>
            <groupId>org.xhtmlrenderer</groupId>
            <artifactId>flying-saucer-pdf</artifactId>
            <version>9.4.1</version>
        </dependency>
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.17.2</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.itextpdf</groupId>
		    <artifactId>itextpdf</artifactId>
		    <version>5.5.13.3</version>
		</dependency>
		<dependency>
			<groupId>io.github.jpenren</groupId>
			<artifactId>thymeleaf-spring-data-dialect</artifactId>
			<version>3.5.0</version>
		</dependency>
		<dependency>
			<groupId>net.sf.flexjson</groupId>
			<artifactId>flexjson</artifactId>
			<version>3.3</version>
		</dependency>
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20231013</version>
		</dependency>		
		<dependency>
	      <groupId>ch.rasc</groupId>
	      <artifactId>sse-eventbus</artifactId>
	      <version>1.1.9</version>
    	</dependency>
		<dependency>
		    <groupId>org.mnode.ical4j</groupId>
		    <artifactId>ical4j</artifactId>
		    <version>3.2.14</version>
		</dependency>
		<dependency>
		   <groupId>org.blazingcache</groupId>
		   <artifactId>blazingcache-jcache</artifactId>
		   <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>com.google.zxing</groupId>
		    <artifactId>core</artifactId>
		    <version>3.5.3</version>
		</dependency>
		<dependency>
		    <groupId>com.google.zxing</groupId>
		    <artifactId>javase</artifactId>
		    <version>3.5.3</version>
		</dependency>
		<dependency>
		    <groupId>com.cronutils</groupId>
		    <artifactId>cron-utils</artifactId>
		    <version>9.2.0</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
      	<finalName>${project.artifactId}</finalName>
	</build>
</project>
